// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module: Delegations fetches bonded delegates 1`] = `
Object {
  "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw": 14,
}
`;

exports[`Module: Delegations fetches current undelegations 1`] = `
Object {
  "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw": Object {
    "balance": Object {
      "amount": "113.0000000000",
    },
    "creation_height": undefined,
    "min_time": undefined,
  },
}
`;

exports[`Module: Delegations should query delegated atoms on reconnection 1`] = `Array []`;

exports[`Module: Delegations submits delegation transaction 1`] = `
Array [
  Array [
    Object {
      "base_req": Object {
        "account_number": "1",
        "chain_id": "test-chain",
        "name": "default",
        "password": "12345",
        "sequence": "1",
      },
      "delegation": Object {
        "amount": "213",
        "denom": "STAKE",
        "shares": "NaN",
      },
      "delegator_addr": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
      "gas": "50000000",
      "password": "12345",
      "validator_addr": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw",
    },
  ],
]
`;

exports[`Module: Delegations submits redelegation transaction 1`] = `
Array [
  Array [
    Object {
      "base_req": Object {
        "account_number": "1",
        "chain_id": "test-chain",
        "name": "default",
        "password": "12345",
        "sequence": "3",
      },
      "delegator_addr": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
      "gas": "50000000",
      "password": "12345",
      "shares": "0.0000000000",
      "validator_dst_addr": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
      "validator_src_addr": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw",
    },
  ],
]
`;

exports[`Module: Delegations submits undelegation transaction 1`] = `
Array [
  Array [
    Object {
      "base_req": Object {
        "account_number": "1",
        "chain_id": "test-chain",
        "name": "default",
        "password": "12345",
        "sequence": "2",
      },
      "delegator_addr": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
      "gas": "50000000",
      "password": "12345",
      "shares": "113.0000000000",
      "validator_addr": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw",
    },
  ],
]
`;
